compile-master/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> empty
Rule 2     program -> basicblock
Rule 3     basicblock -> statements
Rule 4     basicblock -> empty
Rule 5     statements -> statements statement
Rule 6     statements -> statement
Rule 7     statement -> const_declaration
Rule 8     statement -> var_declaration
Rule 9     statement -> assign_statement
Rule 10    statement -> print_statement
Rule 11    statement -> if_statement
Rule 12    statement -> if_else_statement
Rule 13    statement -> while_statement
Rule 14    statement -> return_statement
Rule 15    statement -> func_call
Rule 16    statement -> func_statement
Rule 17    if_statement -> IF expression LCURL basicblock RCURL
Rule 18    if_else_statement -> IF expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
Rule 19    while_statement -> WHILE expression LCURL basicblock RCURL
Rule 20    func_call -> ID LPAREN arguments RPAREN SEMI
Rule 21    arguments -> argument
Rule 22    argument -> expression
Rule 23    arguments -> arguments COMMA argument
Rule 24    arguments -> empty
Rule 25    parameter -> ID typename
Rule 26    parameters -> parameter
Rule 27    parameters -> parameters COMMA parameter
Rule 28    parameters -> empty
Rule 29    func_statement -> FUNC ID typename LPAREN parameters RPAREN LCURL basicblock RCURL
Rule 30    return_statement -> RETURN expression SEMI
Rule 31    const_declaration -> CONST ID ASSIGN expression SEMI
Rule 32    var_declaration -> VAR ID typename SEMI
Rule 33    var_declaration -> VAR ID typename ASSIGN expression SEMI
Rule 34    assign_statement -> location ASSIGN expression SEMI
Rule 35    print_statement -> PRINT expression SEMI
Rule 36    expression -> PLUS expression
Rule 37    expression -> MINUS expression
Rule 38    expression -> NOT expression
Rule 39    expression -> expression PLUS expression
Rule 40    expression -> expression MINUS expression
Rule 41    expression -> expression TIMES expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression GT expression
Rule 44    expression -> expression GTE expression
Rule 45    expression -> expression LT expression
Rule 46    expression -> expression LTE expression
Rule 47    expression -> expression EQ expression
Rule 48    expression -> expression NEQ expression
Rule 49    expression -> expression LAND expression
Rule 50    expression -> expression LOR expression
Rule 51    expression -> LPAREN expression RPAREN
Rule 52    expression -> location
Rule 53    expression -> literal
Rule 54    literal -> INTEGER
Rule 55    literal -> FLOAT
Rule 56    literal -> STRING
Rule 57    literal -> BOOL
Rule 58    location -> ID
Rule 59    typename -> ID
Rule 60    empty -> <empty>

Terminals, with rules where they appear

ASSIGN               : 31 33 34
BOOL                 : 57
COMMA                : 23 27
CONST                : 31
DIVIDE               : 42
ELSE                 : 18
EQ                   : 47
FLOAT                : 55
FUNC                 : 29
GT                   : 43
GTE                  : 44
ID                   : 20 25 29 31 32 33 58 59
IF                   : 17 18
INTEGER              : 54
LAND                 : 49
LCURL                : 17 18 18 19 29
LOR                  : 50
LPAREN               : 20 29 51
LT                   : 45
LTE                  : 46
MINUS                : 37 40
NEQ                  : 48
NOT                  : 38
PLUS                 : 36 39
PRINT                : 35
RCURL                : 17 18 18 19 29
RETURN               : 30
RPAREN               : 20 29 51
SEMI                 : 20 30 31 32 33 34 35
STRING               : 56
TIMES                : 41
VAR                  : 32 33
WHILE                : 19
error                : 

Nonterminals, with rules where they appear

argument             : 21 23
arguments            : 20 23
assign_statement     : 9
basicblock           : 2 17 18 18 19 29
const_declaration    : 7
empty                : 1 4 24 28
expression           : 17 18 19 22 30 31 33 34 35 36 37 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51
func_call            : 15
func_statement       : 16
if_else_statement    : 12
if_statement         : 11
literal              : 53
location             : 34 52
parameter            : 26 27
parameters           : 27 29
print_statement      : 10
program              : 0
return_statement     : 14
statement            : 5 6
statements           : 3 5
typename             : 25 29 32 33
var_declaration      : 8
while_statement      : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . empty
    (2) program -> . basicblock
    (60) empty -> .
    (3) basicblock -> . statements
    (4) basicblock -> . empty
    (5) statements -> . statements statement
    (6) statements -> . statement
    (7) statement -> . const_declaration
    (8) statement -> . var_declaration
    (9) statement -> . assign_statement
    (10) statement -> . print_statement
    (11) statement -> . if_statement
    (12) statement -> . if_else_statement
    (13) statement -> . while_statement
    (14) statement -> . return_statement
    (15) statement -> . func_call
    (16) statement -> . func_statement
    (31) const_declaration -> . CONST ID ASSIGN expression SEMI
    (32) var_declaration -> . VAR ID typename SEMI
    (33) var_declaration -> . VAR ID typename ASSIGN expression SEMI
    (34) assign_statement -> . location ASSIGN expression SEMI
    (35) print_statement -> . PRINT expression SEMI
    (17) if_statement -> . IF expression LCURL basicblock RCURL
    (18) if_else_statement -> . IF expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
    (19) while_statement -> . WHILE expression LCURL basicblock RCURL
    (30) return_statement -> . RETURN expression SEMI
    (20) func_call -> . ID LPAREN arguments RPAREN SEMI
    (29) func_statement -> . FUNC ID typename LPAREN parameters RPAREN LCURL basicblock RCURL
    (58) location -> . ID

    $end            reduce using rule 60 (empty -> .)
    CONST           shift and go to state 6
    VAR             shift and go to state 19
    PRINT           shift and go to state 3
    IF              shift and go to state 21
    WHILE           shift and go to state 4
    RETURN          shift and go to state 23
    ID              shift and go to state 20
    FUNC            shift and go to state 2

    func_call                      shift and go to state 22
    if_statement                   shift and go to state 16
    statements                     shift and go to state 1
    var_declaration                shift and go to state 11
    if_else_statement              shift and go to state 9
    return_statement               shift and go to state 10
    const_declaration              shift and go to state 18
    while_statement                shift and go to state 12
    program                        shift and go to state 13
    func_statement                 shift and go to state 7
    statement                      shift and go to state 15
    print_statement                shift and go to state 5
    basicblock                     shift and go to state 24
    assign_statement               shift and go to state 8
    empty                          shift and go to state 17
    location                       shift and go to state 14

state 1

    (3) basicblock -> statements .
    (5) statements -> statements . statement
    (7) statement -> . const_declaration
    (8) statement -> . var_declaration
    (9) statement -> . assign_statement
    (10) statement -> . print_statement
    (11) statement -> . if_statement
    (12) statement -> . if_else_statement
    (13) statement -> . while_statement
    (14) statement -> . return_statement
    (15) statement -> . func_call
    (16) statement -> . func_statement
    (31) const_declaration -> . CONST ID ASSIGN expression SEMI
    (32) var_declaration -> . VAR ID typename SEMI
    (33) var_declaration -> . VAR ID typename ASSIGN expression SEMI
    (34) assign_statement -> . location ASSIGN expression SEMI
    (35) print_statement -> . PRINT expression SEMI
    (17) if_statement -> . IF expression LCURL basicblock RCURL
    (18) if_else_statement -> . IF expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
    (19) while_statement -> . WHILE expression LCURL basicblock RCURL
    (30) return_statement -> . RETURN expression SEMI
    (20) func_call -> . ID LPAREN arguments RPAREN SEMI
    (29) func_statement -> . FUNC ID typename LPAREN parameters RPAREN LCURL basicblock RCURL
    (58) location -> . ID

    RCURL           reduce using rule 3 (basicblock -> statements .)
    $end            reduce using rule 3 (basicblock -> statements .)
    CONST           shift and go to state 6
    VAR             shift and go to state 19
    PRINT           shift and go to state 3
    IF              shift and go to state 21
    WHILE           shift and go to state 4
    RETURN          shift and go to state 23
    ID              shift and go to state 20
    FUNC            shift and go to state 2

    func_call                      shift and go to state 22
    assign_statement               shift and go to state 8
    if_else_statement              shift and go to state 9
    return_statement               shift and go to state 10
    const_declaration              shift and go to state 18
    while_statement                shift and go to state 12
    location                       shift and go to state 14
    statement                      shift and go to state 25
    print_statement                shift and go to state 5
    var_declaration                shift and go to state 11
    if_statement                   shift and go to state 16
    func_statement                 shift and go to state 7

state 2

    (29) func_statement -> FUNC . ID typename LPAREN parameters RPAREN LCURL basicblock RCURL

    ID              shift and go to state 26


state 3

    (35) print_statement -> PRINT . expression SEMI
    (36) expression -> . PLUS expression
    (37) expression -> . MINUS expression
    (38) expression -> . NOT expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression GTE expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression LAND expression
    (50) expression -> . expression LOR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . location
    (53) expression -> . literal
    (58) location -> . ID
    (54) literal -> . INTEGER
    (55) literal -> . FLOAT
    (56) literal -> . STRING
    (57) literal -> . BOOL

    PLUS            shift and go to state 29
    MINUS           shift and go to state 27
    NOT             shift and go to state 37
    LPAREN          shift and go to state 33
    ID              shift and go to state 34
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 35
    STRING          shift and go to state 32
    BOOL            shift and go to state 36

    literal                        shift and go to state 28
    expression                     shift and go to state 38
    location                       shift and go to state 30

state 4

    (19) while_statement -> WHILE . expression LCURL basicblock RCURL
    (36) expression -> . PLUS expression
    (37) expression -> . MINUS expression
    (38) expression -> . NOT expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression GTE expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression LAND expression
    (50) expression -> . expression LOR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . location
    (53) expression -> . literal
    (58) location -> . ID
    (54) literal -> . INTEGER
    (55) literal -> . FLOAT
    (56) literal -> . STRING
    (57) literal -> . BOOL

    PLUS            shift and go to state 29
    MINUS           shift and go to state 27
    NOT             shift and go to state 37
    LPAREN          shift and go to state 33
    ID              shift and go to state 34
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 35
    STRING          shift and go to state 32
    BOOL            shift and go to state 36

    literal                        shift and go to state 28
    expression                     shift and go to state 39
    location                       shift and go to state 30

state 5

    (10) statement -> print_statement .

    CONST           reduce using rule 10 (statement -> print_statement .)
    VAR             reduce using rule 10 (statement -> print_statement .)
    PRINT           reduce using rule 10 (statement -> print_statement .)
    IF              reduce using rule 10 (statement -> print_statement .)
    WHILE           reduce using rule 10 (statement -> print_statement .)
    RETURN          reduce using rule 10 (statement -> print_statement .)
    ID              reduce using rule 10 (statement -> print_statement .)
    FUNC            reduce using rule 10 (statement -> print_statement .)
    RCURL           reduce using rule 10 (statement -> print_statement .)
    $end            reduce using rule 10 (statement -> print_statement .)


state 6

    (31) const_declaration -> CONST . ID ASSIGN expression SEMI

    ID              shift and go to state 40


state 7

    (16) statement -> func_statement .

    CONST           reduce using rule 16 (statement -> func_statement .)
    VAR             reduce using rule 16 (statement -> func_statement .)
    PRINT           reduce using rule 16 (statement -> func_statement .)
    IF              reduce using rule 16 (statement -> func_statement .)
    WHILE           reduce using rule 16 (statement -> func_statement .)
    RETURN          reduce using rule 16 (statement -> func_statement .)
    ID              reduce using rule 16 (statement -> func_statement .)
    FUNC            reduce using rule 16 (statement -> func_statement .)
    RCURL           reduce using rule 16 (statement -> func_statement .)
    $end            reduce using rule 16 (statement -> func_statement .)


state 8

    (9) statement -> assign_statement .

    CONST           reduce using rule 9 (statement -> assign_statement .)
    VAR             reduce using rule 9 (statement -> assign_statement .)
    PRINT           reduce using rule 9 (statement -> assign_statement .)
    IF              reduce using rule 9 (statement -> assign_statement .)
    WHILE           reduce using rule 9 (statement -> assign_statement .)
    RETURN          reduce using rule 9 (statement -> assign_statement .)
    ID              reduce using rule 9 (statement -> assign_statement .)
    FUNC            reduce using rule 9 (statement -> assign_statement .)
    RCURL           reduce using rule 9 (statement -> assign_statement .)
    $end            reduce using rule 9 (statement -> assign_statement .)


state 9

    (12) statement -> if_else_statement .

    CONST           reduce using rule 12 (statement -> if_else_statement .)
    VAR             reduce using rule 12 (statement -> if_else_statement .)
    PRINT           reduce using rule 12 (statement -> if_else_statement .)
    IF              reduce using rule 12 (statement -> if_else_statement .)
    WHILE           reduce using rule 12 (statement -> if_else_statement .)
    RETURN          reduce using rule 12 (statement -> if_else_statement .)
    ID              reduce using rule 12 (statement -> if_else_statement .)
    FUNC            reduce using rule 12 (statement -> if_else_statement .)
    RCURL           reduce using rule 12 (statement -> if_else_statement .)
    $end            reduce using rule 12 (statement -> if_else_statement .)


state 10

    (14) statement -> return_statement .

    CONST           reduce using rule 14 (statement -> return_statement .)
    VAR             reduce using rule 14 (statement -> return_statement .)
    PRINT           reduce using rule 14 (statement -> return_statement .)
    IF              reduce using rule 14 (statement -> return_statement .)
    WHILE           reduce using rule 14 (statement -> return_statement .)
    RETURN          reduce using rule 14 (statement -> return_statement .)
    ID              reduce using rule 14 (statement -> return_statement .)
    FUNC            reduce using rule 14 (statement -> return_statement .)
    RCURL           reduce using rule 14 (statement -> return_statement .)
    $end            reduce using rule 14 (statement -> return_statement .)


state 11

    (8) statement -> var_declaration .

    CONST           reduce using rule 8 (statement -> var_declaration .)
    VAR             reduce using rule 8 (statement -> var_declaration .)
    PRINT           reduce using rule 8 (statement -> var_declaration .)
    IF              reduce using rule 8 (statement -> var_declaration .)
    WHILE           reduce using rule 8 (statement -> var_declaration .)
    RETURN          reduce using rule 8 (statement -> var_declaration .)
    ID              reduce using rule 8 (statement -> var_declaration .)
    FUNC            reduce using rule 8 (statement -> var_declaration .)
    RCURL           reduce using rule 8 (statement -> var_declaration .)
    $end            reduce using rule 8 (statement -> var_declaration .)


state 12

    (13) statement -> while_statement .

    CONST           reduce using rule 13 (statement -> while_statement .)
    VAR             reduce using rule 13 (statement -> while_statement .)
    PRINT           reduce using rule 13 (statement -> while_statement .)
    IF              reduce using rule 13 (statement -> while_statement .)
    WHILE           reduce using rule 13 (statement -> while_statement .)
    RETURN          reduce using rule 13 (statement -> while_statement .)
    ID              reduce using rule 13 (statement -> while_statement .)
    FUNC            reduce using rule 13 (statement -> while_statement .)
    RCURL           reduce using rule 13 (statement -> while_statement .)
    $end            reduce using rule 13 (statement -> while_statement .)


state 13

    (0) S' -> program .



state 14

    (34) assign_statement -> location . ASSIGN expression SEMI

    ASSIGN          shift and go to state 41


state 15

    (6) statements -> statement .

    CONST           reduce using rule 6 (statements -> statement .)
    VAR             reduce using rule 6 (statements -> statement .)
    PRINT           reduce using rule 6 (statements -> statement .)
    IF              reduce using rule 6 (statements -> statement .)
    WHILE           reduce using rule 6 (statements -> statement .)
    RETURN          reduce using rule 6 (statements -> statement .)
    ID              reduce using rule 6 (statements -> statement .)
    FUNC            reduce using rule 6 (statements -> statement .)
    RCURL           reduce using rule 6 (statements -> statement .)
    $end            reduce using rule 6 (statements -> statement .)


state 16

    (11) statement -> if_statement .

    CONST           reduce using rule 11 (statement -> if_statement .)
    VAR             reduce using rule 11 (statement -> if_statement .)
    PRINT           reduce using rule 11 (statement -> if_statement .)
    IF              reduce using rule 11 (statement -> if_statement .)
    WHILE           reduce using rule 11 (statement -> if_statement .)
    RETURN          reduce using rule 11 (statement -> if_statement .)
    ID              reduce using rule 11 (statement -> if_statement .)
    FUNC            reduce using rule 11 (statement -> if_statement .)
    RCURL           reduce using rule 11 (statement -> if_statement .)
    $end            reduce using rule 11 (statement -> if_statement .)


state 17

    (1) program -> empty .
    (4) basicblock -> empty .

  ! reduce/reduce conflict for $end resolved using rule 1 (program -> empty .)
    $end            reduce using rule 1 (program -> empty .)

  ! $end            [ reduce using rule 4 (basicblock -> empty .) ]


state 18

    (7) statement -> const_declaration .

    CONST           reduce using rule 7 (statement -> const_declaration .)
    VAR             reduce using rule 7 (statement -> const_declaration .)
    PRINT           reduce using rule 7 (statement -> const_declaration .)
    IF              reduce using rule 7 (statement -> const_declaration .)
    WHILE           reduce using rule 7 (statement -> const_declaration .)
    RETURN          reduce using rule 7 (statement -> const_declaration .)
    ID              reduce using rule 7 (statement -> const_declaration .)
    FUNC            reduce using rule 7 (statement -> const_declaration .)
    RCURL           reduce using rule 7 (statement -> const_declaration .)
    $end            reduce using rule 7 (statement -> const_declaration .)


state 19

    (32) var_declaration -> VAR . ID typename SEMI
    (33) var_declaration -> VAR . ID typename ASSIGN expression SEMI

    ID              shift and go to state 42


state 20

    (20) func_call -> ID . LPAREN arguments RPAREN SEMI
    (58) location -> ID .

    LPAREN          shift and go to state 43
    ASSIGN          reduce using rule 58 (location -> ID .)


state 21

    (17) if_statement -> IF . expression LCURL basicblock RCURL
    (18) if_else_statement -> IF . expression LCURL basicblock RCURL ELSE LCURL basicblock RCURL
    (36) expression -> . PLUS expression
    (37) expression -> . MINUS expression
    (38) expression -> . NOT expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression GTE expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression LAND expression
    (50) expression -> . expression LOR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . location
    (53) expression -> . literal
    (58) location -> . ID
    (54) literal -> . INTEGER
    (55) literal -> . FLOAT
    (56) literal -> . STRING
    (57) literal -> . BOOL

    PLUS            shift and go to state 29
    MINUS           shift and go to state 27
    NOT             shift and go to state 37
    LPAREN          shift and go to state 33
    ID              shift and go to state 34
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 35
    STRING          shift and go to state 32
    BOOL            shift and go to state 36

    literal                        shift and go to state 28
    expression                     shift and go to state 44
    location                       shift and go to state 30

state 22

    (15) statement -> func_call .

    CONST           reduce using rule 15 (statement -> func_call .)
    VAR             reduce using rule 15 (statement -> func_call .)
    PRINT           reduce using rule 15 (statement -> func_call .)
    IF              reduce using rule 15 (statement -> func_call .)
    WHILE           reduce using rule 15 (statement -> func_call .)
    RETURN          reduce using rule 15 (statement -> func_call .)
    ID              reduce using rule 15 (statement -> func_call .)
    FUNC            reduce using rule 15 (statement -> func_call .)
    RCURL           reduce using rule 15 (statement -> func_call .)
    $end            reduce using rule 15 (statement -> func_call .)


state 23

    (30) return_statement -> RETURN . expression SEMI
    (36) expression -> . PLUS expression
    (37) expression -> . MINUS expression
    (38) expression -> . NOT expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression GTE expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression LAND expression
    (50) expression -> . expression LOR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . location
    (53) expression -> . literal
    (58) location -> . ID
    (54) literal -> . INTEGER
    (55) literal -> . FLOAT
    (56) literal -> . STRING
    (57) literal -> . BOOL

    PLUS            shift and go to state 29
    MINUS           shift and go to state 27
    NOT             shift and go to state 37
    LPAREN          shift and go to state 33
    ID              shift and go to state 34
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 35
    STRING          shift and go to state 32
    BOOL            shift and go to state 36

    literal                        shift and go to state 28
    expression                     shift and go to state 45
    location                       shift and go to state 30

state 24

    (2) program -> basicblock .

    $end            reduce using rule 2 (program -> basicblock .)


state 25

    (5) statements -> statements statement .

    CONST           reduce using rule 5 (statements -> statements statement .)
    VAR             reduce using rule 5 (statements -> statements statement .)
    PRINT           reduce using rule 5 (statements -> statements statement .)
    IF              reduce using rule 5 (statements -> statements statement .)
    WHILE           reduce using rule 5 (statements -> statements statement .)
    RETURN          reduce using rule 5 (statements -> statements statement .)
    ID              reduce using rule 5 (statements -> statements statement .)
    FUNC            reduce using rule 5 (statements -> statements statement .)
    RCURL           reduce using rule 5 (statements -> statements statement .)
    $end            reduce using rule 5 (statements -> statements statement .)


state 26

    (29) func_statement -> FUNC ID . typename LPAREN parameters RPAREN LCURL basicblock RCURL
    (59) typename -> . ID

    ID              shift and go to state 47

    typename                       shift and go to state 46

state 27

    (37) expression -> MINUS . expression
    (36) expression -> . PLUS expression
    (37) expression -> . MINUS expression
    (38) expression -> . NOT expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression GTE expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression LAND expression
    (50) expression -> . expression LOR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . location
    (53) expression -> . literal
    (58) location -> . ID
    (54) literal -> . INTEGER
    (55) literal -> . FLOAT
    (56) literal -> . STRING
    (57) literal -> . BOOL

    PLUS            shift and go to state 29
    MINUS           shift and go to state 27
    NOT             shift and go to state 37
    LPAREN          shift and go to state 33
    ID              shift and go to state 34
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 35
    STRING          shift and go to state 32
    BOOL            shift and go to state 36

    literal                        shift and go to state 28
    expression                     shift and go to state 48
    location                       shift and go to state 30

state 28

    (53) expression -> literal .

    PLUS            reduce using rule 53 (expression -> literal .)
    MINUS           reduce using rule 53 (expression -> literal .)
    TIMES           reduce using rule 53 (expression -> literal .)
    DIVIDE          reduce using rule 53 (expression -> literal .)
    GT              reduce using rule 53 (expression -> literal .)
    GTE             reduce using rule 53 (expression -> literal .)
    LT              reduce using rule 53 (expression -> literal .)
    LTE             reduce using rule 53 (expression -> literal .)
    EQ              reduce using rule 53 (expression -> literal .)
    NEQ             reduce using rule 53 (expression -> literal .)
    LAND            reduce using rule 53 (expression -> literal .)
    LOR             reduce using rule 53 (expression -> literal .)
    SEMI            reduce using rule 53 (expression -> literal .)
    LCURL           reduce using rule 53 (expression -> literal .)
    RPAREN          reduce using rule 53 (expression -> literal .)
    COMMA           reduce using rule 53 (expression -> literal .)


state 29

    (36) expression -> PLUS . expression
    (36) expression -> . PLUS expression
    (37) expression -> . MINUS expression
    (38) expression -> . NOT expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression GTE expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression LAND expression
    (50) expression -> . expression LOR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . location
    (53) expression -> . literal
    (58) location -> . ID
    (54) literal -> . INTEGER
    (55) literal -> . FLOAT
    (56) literal -> . STRING
    (57) literal -> . BOOL

    PLUS            shift and go to state 29
    MINUS           shift and go to state 27
    NOT             shift and go to state 37
    LPAREN          shift and go to state 33
    ID              shift and go to state 34
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 35
    STRING          shift and go to state 32
    BOOL            shift and go to state 36

    literal                        shift and go to state 28
    expression                     shift and go to state 49
    location                       shift and go to state 30

state 30

    (52) expression -> location .

    PLUS            reduce using rule 52 (expression -> location .)
    MINUS           reduce using rule 52 (expression -> location .)
    TIMES           reduce using rule 52 (expression -> location .)
    DIVIDE          reduce using rule 52 (expression -> location .)
    GT              reduce using rule 52 (expression -> location .)
    GTE             reduce using rule 52 (expression -> location .)
    LT              reduce using rule 52 (expression -> location .)
    LTE             reduce using rule 52 (expression -> location .)
    EQ              reduce using rule 52 (expression -> location .)
    NEQ             reduce using rule 52 (expression -> location .)
    LAND            reduce using rule 52 (expression -> location .)
    LOR             reduce using rule 52 (expression -> location .)
    SEMI            reduce using rule 52 (expression -> location .)
    LCURL           reduce using rule 52 (expression -> location .)
    RPAREN          reduce using rule 52 (expression -> location .)
    COMMA           reduce using rule 52 (expression -> location .)


state 31

    (54) literal -> INTEGER .

    PLUS            reduce using rule 54 (literal -> INTEGER .)
    MINUS           reduce using rule 54 (literal -> INTEGER .)
    TIMES           reduce using rule 54 (literal -> INTEGER .)
    DIVIDE          reduce using rule 54 (literal -> INTEGER .)
    GT              reduce using rule 54 (literal -> INTEGER .)
    GTE             reduce using rule 54 (literal -> INTEGER .)
    LT              reduce using rule 54 (literal -> INTEGER .)
    LTE             reduce using rule 54 (literal -> INTEGER .)
    EQ              reduce using rule 54 (literal -> INTEGER .)
    NEQ             reduce using rule 54 (literal -> INTEGER .)
    LAND            reduce using rule 54 (literal -> INTEGER .)
    LOR             reduce using rule 54 (literal -> INTEGER .)
    SEMI            reduce using rule 54 (literal -> INTEGER .)
    LCURL           reduce using rule 54 (literal -> INTEGER .)
    RPAREN          reduce using rule 54 (literal -> INTEGER .)
    COMMA           reduce using rule 54 (literal -> INTEGER .)


state 32

    (56) literal -> STRING .

    PLUS            reduce using rule 56 (literal -> STRING .)
    MINUS           reduce using rule 56 (literal -> STRING .)
    TIMES           reduce using rule 56 (literal -> STRING .)
    DIVIDE          reduce using rule 56 (literal -> STRING .)
    GT              reduce using rule 56 (literal -> STRING .)
    GTE             reduce using rule 56 (literal -> STRING .)
    LT              reduce using rule 56 (literal -> STRING .)
    LTE             reduce using rule 56 (literal -> STRING .)
    EQ              reduce using rule 56 (literal -> STRING .)
    NEQ             reduce using rule 56 (literal -> STRING .)
    LAND            reduce using rule 56 (literal -> STRING .)
    LOR             reduce using rule 56 (literal -> STRING .)
    SEMI            reduce using rule 56 (literal -> STRING .)
    LCURL           reduce using rule 56 (literal -> STRING .)
    RPAREN          reduce using rule 56 (literal -> STRING .)
    COMMA           reduce using rule 56 (literal -> STRING .)


state 33

    (51) expression -> LPAREN . expression RPAREN
    (36) expression -> . PLUS expression
    (37) expression -> . MINUS expression
    (38) expression -> . NOT expression
    (39) expression -> . expression PLUS expression
    (40) expression -> . expression MINUS expression
    (41) expression -> . expression TIMES expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression GT expression
    (44) expression -> . expression GTE expression
    (45) expression -> . expression LT expression
    (46) expression -> . expression LTE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NEQ expression
    (49) expression -> . expression LAND expression
    (50) expression -> . expression LOR expression
    (51) expression -> . LPAREN expression RPAREN
    (52) expression -> . location
    (53) expression -> . literal
    (58) location -> . ID
    (54) literal -> . INTEGER
    (55) literal -> . FLOAT
    (56) literal -> . STRING
    (57) literal -> . BOOL

    PLUS            shift and go to state 29
    MINUS           shift and go to state 27
    NOT             shift and go to state 37
    LPAREN          shift and go to state 33
    ID              shift and go to state 34
    INTEGER         shift and go to state 31
    FLOAT           shift and go to state 35
    STRING          shift and go to state 32
    BOOL            shift and go to state 36

    literal                        shift and go to state 28
    expression                     shift and go to state 50
    location                       shift and go to state 30

state 34

    (58) location -> ID .

    PLUS            reduce using rule 58 (location -> ID .)
    MINUS           reduce using rule 58 (location -> ID .)
    TIMES           reduce using rule 58 (location -> ID .)
    DIVIDE          reduce using rule 58 (location -> ID .)
    GT              reduce using rule 58 (location -> ID .)
    GTE             reduce using rule 58 (location -> ID .)
    LT              reduce using rule 58 (location -> ID .)
    LTE             reduce using rule 58 (location -> ID .)
    EQ              reduce using rule 58 (location -> ID .)
    NEQ             reduce using rule 58 (location -> ID .)
    LAND            reduce using rule 58 (location -> ID .)
    LOR             reduce using rule 58 (location -> ID .)
    SEMI            reduce using rule 58 (location -> ID .)
    LCURL           reduce using rule 58 (location -> ID .)
    RPAREN          reduce using rule 58 (location -> ID .)
    COMMA           reduce using rule 58 (location -> ID .)


state 35

    (55) literal -> FLOAT .

    PLUS            reduce using rule 55 (literal -> FLOAT .)
    MINUS           reduce using rule 55 (literal -> FLOAT .)
    TIMES           reduce using rule 55 (literal -> FLOAT .)
    DIVIDE          reduce using rule 55 (literal -> FLOAT .)
    GT              reduce using rule 55 (literal -> FLOAT .)
    GTE             reduce using rule 55 (literal -> FLOAT .)
    LT              reduce using rule 55 (literal -> FLOAT .)
    LTE             reduce using rule 55 (literal -> FLOAT .)
    EQ              reduce using rule 55 (literal -> FLOAT .)
    NEQ             reduce using rule 55 (literal -> FLOAT .)
    LAND            reduce using rule 55 (literal -> FLOAT .)
    LOR             reduce using rule 55 (literal -> FLOAT .)
    SEMI            reduce using rule 55 (literal -> FLOAT .)
    LCURL           reduce using rule 55 (literal -> FLOAT .)
    RPAREN          reduce using rule 55 (literal -> FLOAT .)
    COMMA           reduce using rule 55 (literal -> FLOAT .)


state 36

    (57) literal -> BOOL .

    PLUS            reduce using rule 57 (literal -> BOOL .)
    MINUS           reduce using rule 57 (literal -> BOOL .)
    TIMES           reduce using rule 57 (literal -> BOOL .)
    DIVIDE          reduce using rule 57 (literal -> BOOL .)
    GT              reduce using rule 57 (literal -> BOOL .)
    GTE             reduce using rule 57 (literal -> BOOL .)
    LT              reduce using rule 57 (literal -> BOOL .)
    LTE             reduce using rule 57 (literal -> BOOL .)
    EQ              reduce using rule 57 (literal -> BOOL .)
    NEQ             reduce using rule 57 (literal -> BOOL .)
    LAND            reduce using rule 57 (literal -> BOOL .)
    LOR             reduce using rule 57 (literal -> BOOL .)
    SEMI            reduce using rule 57 (literal -> BOOL .)
    LCURL           reduce using rule 57 (literal -> BOOL .)
    RPAREN          reduce using rule 57 (literal -> BOOL .)
    COMMA           reduce using rule 57 (literal -> BOOL .)


state 37
